--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "express-session": "^1.17.3",
     "google-auth-library": "^9.2.0",
     "joi": "^17.11.0",
+    "latest": "^0.2.0",
     "luxon": "^3.4.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -64,12 +66,12 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/ejs": "^3.1.2",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.7",
     "@types/jest": "^29.5.2",
     "@types/joi": "^17.2.3",
     "@types/morgan": "^1.9.5",
-    "@types/multer": "^1.4.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.5.9",
     "@types/nodemailer": "^6.4.11",
     "@types/supertest": "^2.0.12",
